# car

./: .clangd  .gitignore  CMakeLists.txt  README.md
app/: App.cpp  App.hpp  main.cpp
assets/Arrow/: arrow.gltf  attack.gltf  death.gltf  idle.gltf  walk.gltf
assets/Shield/: death.gltf  idle.gltf  shield.gltf  slash.gltf  sword.gltf  walk.gltf
assets/Vampire/: Vampire.gltf
assets/human_test/: human_test.gltf
assets/test/: test.gltf
shaders/cs/: culling.comp  culling_lod.comp  ifft2.comp  ocean_ampl.comp  ocean_sign.comp
shaders/vs_fs/: basic.vert  brdf.frag  convolution_cubemap.frag  deferred.frag  depth_mipmap.frag  equirectangular2cubemap.frag  equirectangular2cubemap.vert  gBuffer.frag  gBuffer.vert  highlight.vert  ocean.frag  ocean.vert  pbr.frag  pbr.vert  pbr_uniform.frag  pbr_uniform.vert  phong.frag  phong.vert  phong_indirect.vert  phong_instance.frag  phong_instance.vert  picking.vert  picking_instance.frag  picking_instance.vert  prefiltering.frag  shadow.frag  shadow.vert  skeletal_phong.frag  skeletal_phong.vert  skeletal_phong_indirect.vert  skeletal_phong_indirect_lod.frag  skeletal_phong_indirect_lod.vert  skeletal_phong_instance.vert  skybox.frag  skybox.vert  ssao.frag  ssao_geometry.frag  ssao_geometry.vert  ssao_lighting.frag  ssgi.frag
shaders/vs_gs_fs/: cascade_shadow.geom  cascade_shadow.vert  cascade_shadow_skeletal.geom  cascade_shadow_skeletal.vert  shadow.geom
src/app/: App.cpp  App.hpp  main.cpp
src/assimp/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Bone.cpp  Bone.hpp  IModel.hpp  Model.cpp  Model.hpp  ModelSkeletal.cpp  ModelSkeletal.hpp  ModelSkeletalLod.cpp  ModelSkeletalLod.hpp
src/game/: Actor.hpp  ActorInstance.hpp  ActorSkeletal.cpp  ActorSkeletal.hpp  ActorSkeletalInstance.cpp  ActorSkeletalInstance.hpp  Game.cpp  Game.hpp  IActor.hpp  Init.cpp  Input.cpp  Scene.cpp  Scene.hpp  SceneCharacter.cpp  SceneCharacter.hpp  SceneCloth.cpp  SceneCloth.hpp  SceneClothCube.cpp  SceneClothCube.hpp  SceneClothSphere.cpp  SceneClothSphere.hpp  SceneOneSpring.cpp  SceneOneSpring.hpp  SceneTwoTriangle.cpp  SceneTwoTriangle.hpp  Shield.hpp  Skybox.cpp  Skybox.hpp  Test.cpp  UI.cpp
src/game/Actor/: Actor.cpp  Actor.hpp  ActorIndirect.cpp  ActorIndirect.hpp  ActorInstance.cpp  ActorInstance.hpp  ActorSkeletal.cpp  ActorSkeletal.hpp  ActorSkeletalIndirect.cpp  ActorSkeletalIndirect.hpp  ActorSkeletalIndirectLod.cpp  ActorSkeletalIndirectLod.hpp  ActorSkeletalInstance.cpp  ActorSkeletalInstance.hpp  IActor.hpp
src/game/BasicActor/: Cloth.cpp  Cloth.hpp  Ocean.cpp  Ocean.hpp  Skybox.cpp  Skybox.hpp
src/glad/: glad.h
src/math/: Geometry.cpp  Geometry.hpp  Math.cpp  Math.hpp  cubicSolver_adsk.cpp
src/physics/: Cloth.cpp  Cloth.hpp  Dihedral.cpp  Dihedral.hpp  Math.hpp  Particle.cpp  Particle.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Spring.cpp  Spring.hpp
src/physics/collision/: CCD.cpp  CCD.hpp  Intersection.cpp  Intersection.hpp  Response.cpp  Response.hpp
src/render/: Brdf.cpp  Brdf.hpp  Camera.hpp  ConvolutionCubeMap.cpp  ConvolutionCubeMap.hpp  CreateBasicGeometry.cpp  CreateResources.cpp  Equirectangular2Cubemap.cpp  Equirectangular2Cubemap.hpp  Mesh.cpp  Mesh.hpp  Picking.cpp  Picking.hpp  Prefiltering.cpp  Prefiltering.hpp  Primitive.cpp  Primitive.hpp  Render.cpp  Render.hpp  SSAO.cpp  SSAO.hpp  Shader.cpp  Shader.hpp  ShadowMap.cpp  ShadowMap.hpp
src/render/BasicGeometry/: Cube.cpp  Cube.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Tool.cpp  Tool.hpp
src/render/Camera/: Camera.hpp
src/render/Material/: IMaterial.hpp  Material.cpp  Material.hpp  MaterialSkybox.cpp  MaterialSkybox.hpp
src/render/Mesh/: IMesh.hpp  Mesh.cpp  Mesh.hpp  MeshSkeletal.cpp  MeshSkeletal.hpp  MeshSkeletalLod.cpp  MeshSkeletalLod.hpp  MeshTBN.cpp  MeshTBN.hpp  Vertex.hpp
src/render/Primitive/: Cube.cpp  Cube.hpp  IMesh.hpp  IPrimitive.hpp  Mesh.hpp  MeshBase.cpp  MeshBase.hpp  MeshSkeletal.cpp  MeshSkeletal.hpp  Primitive.cpp  Primitive.hpp  (+13 more)
src/tools/: Singleton.hpp  System.hpp  Timer.cpp  Timer.hpp  Tool.cpp  Tool.hpp
test/unit/: collision.cpp  collision_detection.cpp  collision_response.cpp  main.cpp  math.cpp
(+6 files in other folders)
